tests/models/snapshots/can_create_with_password@users.snap
---
source: tests/models/users.rs
expression: res
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: PID,
        tenant_id: PID,
        email: "test@framework.com",
        password: "PASSWORD",
        api_key: "lo-PID",
        name: "framework",
        status: "active",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: None,
        email_verification_sent_at: None,
        email_verified_at: None,
        magic_link_token: None,
        magic_link_expiration: None,
        avatar_file_id: None,
        password_changed_at: Some(
            DATE,
        ),
        preferred_locale: None,
    },
)
